# HEMA_CaseStudy

./: .gitignore  Medallion_Architecture.md  README.md  pyproject.toml
data/: README.md
data/processed/bronze/order_year=2015/order_month=1/order_day=10/: part-00000-64b0915d-35b9-4fc3-a04c-13950b3e108a.c000.snappy.parquet  part-00000-fe3292fe-8890-4522-8e97-0da236af236c.c000.snappy.parquet
data/processed/bronze/order_year=2015/order_month=1/order_day=11/: part-00000-64b0915d-35b9-4fc3-a04c-13950b3e108a.c000.snappy.parquet  part-00000-fe3292fe-8890-4522-8e97-0da236af236c.c000.snappy.parquet
data/processed/bronze/order_year=2015/order_month=1/order_day=13/: part-00000-64b0915d-35b9-4fc3-a04c-13950b3e108a.c000.snappy.parquet  part-00000-fe3292fe-8890-4522-8e97-0da236af236c.c000.snappy.parquet
data/processed/gold_csv/: sales.csv
data/processed/gold_csv/customer/: part-00000-3b4f9c28-32db-413c-8e78-20206b0f6067-c000.csv
data/processed/quarantine/bronze_malformed_order_dates/: part-00000-17ece933-02fb-4fd7-922d-2d8aa8fe5012-c000.snappy.parquet  part-00000-1c4f48ac-3b38-4c9f-965c-3e4a61b0313d-c000.snappy.parquet
data/processed/quarantine/silver/: part-00000-1fca48d3-2ac4-46dd-bc33-41bbced1cdfc-c000.snappy.parquet  part-00000-5b6acd2f-b095-438c-aaa8-7e4fdae3d599-c000.snappy.parquet
glue_jobs/: bronze_job.py  gold_customer_job.py  gold_sales_job.py  silver_job.py
scripts/: run_local_pipeline.py  validate_outputs.py
src/: core.py
tests/: conftest.py  test_bronze.py  test_end_to_end.py  test_gold_customer.py  test_gold_sales.py  test_logging.py  test_silver.py
(+9396 files in other folders)
