[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hema-retail-sales-case"
version = "0.1.0"
description = "PySpark medallion ETL pipeline for the HEMA retail sales case study"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["core"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
